FIX: Error markers on base form were not hidden by opened modal dialog in mobile layout

--- a/frontend-html/src/gui/connections/MobileComponents/MobileMain.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/MobileMain.module.scss
@@ -44,7 +44,7 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 .dialog {
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 101;
   position: absolute;
   height: 100%;
   background: var(--background1);
